# Sweetpotato_transplanting

./: README.md
CNN_sps/: README.md  calculate_mean_coco.py  dataset.py  folder_predictions.py  plot_metrics.py  single_image_prediction.py  slip_maskrcnn_predictor.py  train_fast.py  validate.py  validate_all.py  visualize_predictions.py  visualize_predictions_offline.py
data_generation/: README.md  contour_to_mask.py  labelme2coco_v1.py  pil_augment.py  synthesize.py  visualize_coco.py
data_generation/labelme2coco/: __init__.py  labelme2coco.py  labelme2coco_v1.py  labelme2coco_v1_2kp.py  utils.py
data_generation/sahi/utils/: coco.py
data_generation/singles/: 0_image.json  10_image.json  11_image.json  12_image.json  13_image.json  14_image.json  15_image.json  16_image.json  17_image.json  18_image.json  19_image.json  1_image.json  20_image.json  21_image.json  22_image.json  23_image.json  24_image.json  25_image.json  26_image.json  27_image.json  28_image.json  29_image.json  2_image.json  30_image.json  31_image.json  32_image.json  33_image.json  34_image.json  35_image.json  36_image.json  37_image.json  38_image.json  39_image.json  3_image.json  4_image.json  5_image.json  6_image.json  7_image.json  8_image.json  9_image.json
extrinsic_calibration/: CMakeLists.txt  README.md  package.xml
extrinsic_calibration/data_files/: final_R_and_T.txt  kinect_points_wrt_camera_link.txt  marker_coordinates_wrt_wrist2_link.txt  points_wrt_kinnect.txt
extrinsic_calibration/src/: calculation_of_R_and_T.cpp  convert_point_from_base_link_to_wrist2_link.cpp  convert_point_from_depth_optical_frame_to_camera_link.cpp  error_calculation.cpp  save_cloud_and_image.cpp  store_markers_wrt_base_link.cpp  store_points_wrt_kinect.cpp  test.cpp  test_opencv  test_transformation.cpp  visualize_marker_from_kinect.cpp  visualize_marker_from_robot.cpp
robotic_action_src/: README.md  benchmark_on_real_data_slips.py  calibration_start_pose.txt  camera.py  current_pose.txt  data_collection.py  goal_pose.txt  grasp_planning_baseline.py  grasp_planning_ours.py  gripper_robotiq.py  gripper_testing.py  main_robot.py  start_pose.txt  ur_run_predefined_pose.py
robotic_action_src/commons/: cas_grasp_algo.py  custom_grasp_planning_algorithm_dense_cas.py  functions_for_length_wise_cuts.py  grasp_evaluation_cas.py  utils_gs.py  utils_gs_cas.py
robotic_action_src/transplanting_poses/: transplanting_pose.txt  transplanting_pose_10_0.txt  transplanting_pose_10_1.txt  transplanting_pose_1_0.txt  transplanting_pose_1_1.txt  transplanting_pose_2_0.txt  transplanting_pose_2_1.txt  transplanting_pose_3_0.txt  transplanting_pose_3_1.txt  transplanting_pose_4_0.txt  transplanting_pose_4_1.txt  transplanting_pose_5_0.txt  transplanting_pose_5_1.txt  transplanting_pose_6_0.txt  transplanting_pose_6_1.txt  transplanting_pose_7_0.txt  transplanting_pose_7_1.txt  transplanting_pose_8_0.txt  transplanting_pose_8_1.txt  transplanting_pose_9_0.txt  transplanting_pose_9_1.txt
validation_data/: README.md  coco_leaf_nonoverlap.json  coco_leaf_overlap.json  coco_nonleaf_overlap.json  cooc_nonleaf_nonoverlap.json
validation_data/leaves/non-overlap/: 0_image.json  1_image.json  2_image.json  3_image.json  4_image.json  5_image.json  6_image.json  7_image.json  8_image.json  9_image.json
validation_data/leaves/overlap/: 0_image.json  1_image.json  2_image.json  3_image.json  4_image.json  5_image.json  6_image.json  7_image.json  8_image.json  9_image.json
validation_data/no_leaves/non-overlap/: 0_image.json  1_image.json  2_image.json  3_image.json  4_image.json  5_image.json  6_image.json  7_image.json  8_image.json  9_image.json
validation_data/no_leaves/overlap/: 0_image.json  1_image.json  2_image.json  3_image.json  4_image.json  5_image.json  6_image.json  7_image.json  8_image.json  9_image.json
